--- a/web/modules/custom/travel/templates/article-list.html.twig
+++ b/web/modules/custom/travel/templates/article-list.html.twig
@@ -1,6 +1,2 @@
 <h4>{{ title }}</h4>
-<ul>
-{% for article in items %}
-  <li> 1 {{ article.name }} </li>
-{% endfor %}
-</ul>
+<p>{{ content }}</p>
